--- a/config
+++ b/config
@@ -4,6 +4,14 @@
 
 focus_follows_mouse no
 
+# i3-gaps 
+# disable title bar to enable gaps
+for_window [class="^.*"] border pixel 0
+gaps inner 8
+gaps outer 0
+
+#smart_gaps on
+
 
 set $white #ffffff
 
