--- a/config
+++ b/config
@@ -6,11 +6,22 @@ focus_follows_mouse no
 
 # i3-gaps 
 # disable title bar to enable gaps
-for_window [class="^.*"] border pixel 0
+for_window [class="^.*"] border pixel 3
 gaps inner 15
 gaps outer 0
 
 #smart_gaps on
+
+# # #---Dropdown/Scratchpad Windows---# #
+# # First I have a tmux window used for background scripts.
+# # I'll later bind this to mod+u.
+for_window [instance="dropdown"] floating enable
+for_window [instance="dropdown"] resize set 625 400
+for_window [instance="dropdown"] move scratchpad
+for_window [instance="dropdown"] border pixel 5
+exec --no-startup-id termite --name=dropdown -e tmux
+bindsym $mod+u			[instance="dropdown"] scratchpad show; [instance="dropdown"] move position center
+bindsym $mod+Shift+u		resize shrink height 10 px or 10 ppt
 
 
 set $white #ffffff
@@ -46,7 +57,7 @@ set $bw3 #aaaaaa
 set $bw4 #ffffff
 
 # class                   border  backgr. text    indicator child_border
-client.focused            $blue3 $blue4 $white $yellow3  $blue0 
+client.focused            $blue3 $blue4 $white $blue0  $blue3 
 client.focused_inactive   #333333 #5f676a $white #484e50   #5f676a
 client.unfocused          #333333 #222222 #888888 #292d2e   #222222
 client.urgent             #2f343a #900000 $white #900000   #900000
@@ -134,6 +145,7 @@ bindsym $mod+space focus mode_toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
+bindsym $mod+Shift+a focus child
 
 # focus the child container
 #bindsym $mod+d focus child
@@ -203,7 +215,7 @@ bar {
   position top
 }
 
-exec_always feh --bg-scale ~/.i3/bg/hiden-ball.jpg
+exec_always feh --bg-scale ~/.i3/bg/dog.jpg
 exec compton
 
 exec_always ~/.i3/dualmon.sh
