--- a/config
+++ b/config
@@ -211,7 +211,8 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 exec export LC_ALL=en_US.UTF-8
 bar {
-  status_command i3blocks 
+  # status_command i3blocks 
+  status_command py3status -c ~/.i3/i3status.conf 
   position top
 }
 
