--- a/i3status.conf
+++ b/i3status.conf
@@ -1,13 +1,3 @@
-# github.com/rafi i3status config
-
-# i3status configuration file
-# see "man i3status" for documentation.
-
-# It is important that this file is edited as UTF-8.
-# The following line should contain a sharp s:
-# ß
-# If the above line is not correctly displayed, fix your editor first!
-
 general {
 	colors = true
 	# color_good = "#BBBBBB"
@@ -17,25 +7,17 @@ general {
 	interval = 2
 }
 
-order += "volume master"
-order += "load"
-order += "cpu_usage"
-# order += "cpu_temperature 0"
-# order += "cpu_temperature 1"
-# order += "cpu_temperature 2"
-# order += "cpu_temperature 3"
+order += "sysdata"
 order += "disk /"
-# order += "disk /media/media"
 order += "ethernet eno1"
 order += "wireless wlp2s0"
 order += "pomodoro"
 order += "tztime local"
-#order += "ipv6"
-#order += "run_watch DHCP"
-#order += "run_watch VPN"
+order += "volume master"
 
 volume master {
-	format = "♪ %volume " 
+	format = "♪%volume" 
+  format_muted = "♪mute"
 	device = "default"
 	mixer = "Master"
 	mixer_idx = 0
@@ -45,59 +27,31 @@ load {
 	format = "Δ%1min"
 }
 
-cpu_usage {
-	format = "%usageΔ"
-}
+# cpu_usage {
+# 	format = "%usageΔ"
+# }
 
-cpu_temperature 0 {
-	format = " ± %degrees°"
-	path = "/sys/devices/platform/coretemp.0/temp2_input"
-	max_threshold = 95
-}
+sysdata {
+  # for temperature on arch need to install i2c-tools
+  # format = ‘[?color=cpu CPU: {cpu_usage}%], ‘ ‘[?color=mem Mem: {mem_used}/{mem_total} GB ({mem_used_percent}%)]’)
 
-cpu_temperature 1 {
-	format = "%degrees°"
-	path = "/sys/devices/platform/coretemp.0/temp3_input"
-	max_threshold = 95
-}
-
-cpu_temperature 2 {
-	format = "%degrees°"
-	path = "/sys/devices/platform/coretemp.0/temp4_input"
-	max_threshold = 95
-}
-
-cpu_temperature 3 {
-	format = "%degrees° "
-	path = "/sys/devices/platform/coretemp.0/temp5_input"
-	max_threshold = 95
+  # format = "{mem_used}/{mem_total}GB {cpu_usage}%"
+  
 }
 
 disk "/" {
-	format = ":/ %avail " 
-}
-
-disk "/media/media" {
-	format = " ¨ %avail:m "
+	format = "%avail" 
 }
 
 wireless wlp2s0 {
-	format_up = " ☡: (%quality at %essid) %ip "
-	format_down = " ☡: down "
+	format_up = "☡ (%quality at %essid)"
+	format_down = "☡"
 }
 
 ethernet eno1 {
 	# if you use %speed, i3status requires root privileges
-	format_up =  "Ω: %ip"
-	format_down = "∅: down"
-}
-
-run_watch DHCP {
-	pidfile = "/var/run/dhclient*.pid"
-}
-
-run_watch VPN {
-	pidfile = "/var/run/vpnc/pid"
+	format_up =  "∅ %ip"
+	format_down = "∅"
 }
 
 pomodoro {
@@ -121,6 +75,6 @@ pomodoro {
 }
 
 tztime local {
-	format = " %h-%d %H:%M.%S  "
+	format = "%H:%M"
 }
 
