--- a/config
+++ b/config
@@ -210,7 +210,7 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-exec export LC_ALL=en_US.UTF-8
+# exec export LC_ALL=en_US.UTF-8
 bar {
   # status_command i3blocks 
   status_command py3status -c ~/.i3/i3status.conf 
