--- a/i3blocks.cfg
+++ b/i3blocks.cfg
@@ -1,4 +1,4 @@
-command=~/.scripts/statusbar/$BLOCK_NAME
+command=~/.config/i3/scripts/statusbar/$BLOCK_NAME
 separator_block_width=15
 markup=pango
 
