--- a/i3blocks.cfg
+++ b/i3blocks.cfg
@@ -12,19 +12,19 @@ label=🎼
 interval=once
 signal=11
 
-[news]
-label=📰
-interval=once
-signal=6
+# [news]
+# label=📰
+# interval=once
+# signal=6
 
 [pacpackages]
 label=📦
 interval=once
 signal=8
 
-[torrent]
-interval=20
-signal=7
+# [torrent]
+# interval=20
+# signal=7
 
 [weather]
 interval=3600
@@ -34,29 +34,25 @@ label=📬
 interval=180
 signal=12
 
-#[memory]
-#interval=30
-#label=🧠
+[memory]
+interval=30
+label=🧠
 
-#[cpu]
-#interval=15
-#label=💻
+[cpu]
+interval=15
+label=💻
 
 [volume]
 interval=once
 signal=10
 
-#[disk]
-#interval=60
-#command=disk /
+[disk]
+interval=60
+command=disk /
 
 #[disk]
 #interval=60
 #command=disk /home 🏠
-
-[battery]
-command=battery BAT0
-interval=5
 
 [clock]
 label=📅
@@ -65,5 +61,11 @@ interval=30
 [internet]
 interval=10
 
-[help]
-interval=once
+[battery]
+command=battery BAT0
+interval=5
+
+# [help]
+# interval=once
+
+# vim: ft=sh
