After multi display changes reload wallpaper... Actualy whole i3 is restarted.

--- a/config
+++ b/config
@@ -50,7 +50,7 @@ for_window [instance="dropdowncalc"] sticky enable
 
 # #---Starting External Scripts---# #
 # Setting the background:
-exec --no-startup-id feh --bg-scale ~/.config/i3/wallpaper/dog.jpg
+exec_always --no-startup-id feh --bg-scale ~/.config/i3/wallpaper/dog.jpg
 # Starts dunst for notifications:
 exec --no-startup-id dunst
 # Composite manager:
