i3blocks: Icon for disk free space and move volume to before last

--- a/i3blocks.cfg
+++ b/i3blocks.cfg
@@ -42,13 +42,10 @@ label=🧠
 interval=15
 label=💻
 
-[volume]
-interval=once
-signal=10
-
 [disk]
 interval=60
 command=disk /
+label=💽
 
 #[disk]
 #interval=60
@@ -60,6 +57,10 @@ interval=30
 
 [internet]
 interval=10
+
+[volume]
+interval=once
+signal=10
 
 [battery]
 command=battery BAT0
