--- a/i3blocks.cfg
+++ b/i3blocks.cfg
@@ -47,9 +47,9 @@ interval=60
 command=disk /
 label=💽
 
-#[disk]
-#interval=60
-#command=disk /home 🏠
+[disk]
+interval=60
+command=disk /home 🏠
 
 [clock]
 label=📅
