Rebind resize window to mod+ctrl+[hjkl]

--- a/config
+++ b/config
@@ -154,77 +154,81 @@ bindsym $mod+e			exec $term -e neomutt && pkill -RTMIN+12 i3blocks
 bindsym $mod+Shift+e		exec --no-startup-id tutorialvids
 
 bindsym $mod+r 			exec $term -e ranger
-bindsym $mod+Shift+r		exec --no-startup-id winresize
+bindsym $mod+Shift+r	exec --no-startup-id winresize
 
 bindsym $mod+t			split toggle
-bindsym $mod+Shift+t		gaps inner current set 15; gaps outer current set 15
+bindsym $mod+Shift+t	gaps inner current set 15; gaps outer current set 15
 
 bindsym $mod+y			exec $term -e calcurse
-bindsym $mod+Shift+y		exec --no-startup-id i3resize left
+#bindsym $mod+Shift+y
 
 bindsym $mod+u			exec --no-startup-id ddspawn tmuxdd
-bindsym $mod+Shift+u		exec --no-startup-id i3resize down
+#bindsym $mod+Shift+u
 
 bindsym $mod+i 			exec $term -e htop
-bindsym $mod+Shift+i		exec --no-startup-id i3resize up
+#bindsym $mod+Shift+i
 
 bindsym $mod+o			sticky toggle
-bindsym $mod+Shift+o		exec --no-startup-id i3resize right
+#bindsym $mod+Shift+o
 
 bindsym $mod+p			exec --no-startup-id lmc toggle
-bindsym $mod+Shift+p		exec --no-startup-id lmc pause
+bindsym $mod+Shift+p	exec --no-startup-id lmc pause
 
 bindsym $mod+a			exec --no-startup-id ddspawn dropdowncalc -f mono:pixelsize=24
-bindsym $mod+Shift+a		exec $term -e pulsemixer
+bindsym $mod+Shift+a	exec $term -e pulsemixer
 
 bindsym $mod+s			gaps inner current plus 5
-bindsym $mod+Shift+s		gaps inner current minus 5
+bindsym $mod+Shift+s	gaps inner current minus 5
 
 bindsym $mod+d			exec --no-startup-id dmenu_run
-bindsym $mod+Shift+d		gaps inner current set 0; gaps outer current set 0
+bindsym $mod+Shift+d	gaps inner current set 0; gaps outer current set 0
 
 set $freeze Distraction-free mode (super+shift+f to reactivate bindings)
 mode "$freeze" { bindsym $mod+Shift+f mode "default"
 }
 
 bindsym $mod+f			fullscreen toggle
-bindsym $mod+Shift+f		mode "$freeze" ;; exec --no-startup-id notify-send "<b>Distraction-free mode activated.</b> Press Super+Shift+f to return."
+bindsym $mod+Shift+f	mode "$freeze" ;; exec --no-startup-id notify-send "<b>Distraction-free mode activated.</b> Press Super+Shift+f to return."
 
 bindsym $mod+g			workspace prev
-bindsym $mod+Shift+g		exec --no-startup-id gimp; workspace $ws5
+bindsym $mod+Shift+g	exec --no-startup-id gimp; workspace $ws5
 
 bindsym $mod+h			focus left
-bindsym $mod+Shift+h		move left 30
+bindsym $mod+Shift+h	move left 30
+bindsym $mod+Ctrl+h		exec --no-startup-id i3resize left
 
 bindsym $mod+j			focus down
-bindsym $mod+Shift+j		move down 30
+bindsym $mod+Shift+j	move down 30
+bindsym $mod+Ctrl+j		exec --no-startup-id i3resize down
 
 bindsym $mod+k			focus up
-bindsym $mod+Shift+k		move up 30
+bindsym $mod+Shift+k	move up 30
+bindsym $mod+Ctrl+k		exec --no-startup-id i3resize up
 
 bindsym $mod+l			focus right
-bindsym $mod+Shift+l		move right 30
+bindsym $mod+Shift+l	move right 30
+bindsym $mod+Ctrl+l		exec --no-startup-id i3resize right
 
 bindsym $mod+z			gaps outer current plus 5
-bindsym $mod+Shift+z		gaps outer current minus 5
+bindsym $mod+Shift+z	gaps outer current minus 5
 
 bindsym $mod+x			exec --no-startup-id lockscreen
-bindsym $mod+Shift+x		exec --no-startup-id prompt "Shutdown computer?" "$shutdown"
+bindsym $mod+Shift+x	exec --no-startup-id prompt "Shutdown computer?" "$shutdown"
 
 #bindsym $mod+c
-bindsym $mod+Shift+c		exec --no-startup-id camtoggle
+bindsym $mod+Shift+c	exec --no-startup-id camtoggle
 
 #bindsym $mod+v
 #bindsym $mod+Shift+v
 
 bindsym $mod+b			bar mode toggle
-bindsym $mod+Shift+b		floating toggle; sticky toggle; exec --no-startup-id bottomleft
+bindsym $mod+Shift+b	floating toggle; sticky toggle; exec --no-startup-id bottomleft
 
 bindsym $mod+n			exec $term -e newsboat && pkill -RTMIN+6 i3blocks
-bindsym $mod+Shift+n		floating toggle; sticky toggle; exec --no-startup-id bottomright
+bindsym $mod+Shift+n	floating toggle; sticky toggle; exec --no-startup-id bottomright
 
 bindsym $mod+m 			exec --no-startup-id $term -e ncmpcpp
-bindsym $mod+Shift+m		exec --no-startup-id lmc mute
+bindsym $mod+Shift+m	exec --no-startup-id lmc mute
 
 
 # #---Workspace Bindings---# #
