--- a/config
+++ b/config
@@ -67,9 +67,9 @@ exec --no-startup-id remaps
 # Unclutter makes the mouse invisible after a brief period
 exec --no-startup-id unclutter
 # Run the script to update the mpd i3block on change.
-exec_always --no-startup-id mpdupdate
+#exec_always --no-startup-id mpdupdate
 # mpd startup
-exec --no-startup-id mpd
+#exec --no-startup-id mpd
 # Podboat automatic queue and download
 exec_always --no-startup-id podentr
 
