Some minor status line (i3blocks) changes.

--- a/i3blocks.cfg
+++ b/i3blocks.cfg
@@ -7,10 +7,10 @@ command=cat ~/.recordingicon
 interval=once
 signal=9
 
-[music]
-label=🎼
-interval=once
-signal=11
+# [music]
+# label=🎼
+# interval=once
+# signal=11
 
 # [news]
 # label=📰
@@ -29,14 +29,15 @@ signal=8
 # [weather]
 # interval=3600
 
-[mailbox]
-label=📬
-interval=180
-signal=12
+# [mailbox]
+# label=📬
+# interval=180
+# signal=12
 
 [memory]
 interval=30
 label=🧠
+full_text="$BLOCK_NAME"
 
 [cpu]
 interval=15
