--- a/config
+++ b/config
@@ -104,11 +104,11 @@ bar {
             background $darkblack
             statusline $darkwhite
             separator $cyan
-#                         BORDER      BACKGROUND  FONT
+#                               BORDER      BACKGROUND  FONT
             focused_workspace   $red        $darkred    $white
-      active_workspace    $darkgreen  $darkblack  $white
-      inactive_workspace  $darkblack  $darkblack  $white
-      urgent_workspace    $darkblack  $darkblack  $white
+            active_workspace    $darkgreen  $darkblack  $white
+            inactive_workspace  $darkblack  $darkblack  $white
+            urgent_workspace    $darkblack  $darkblack  $white
         }
     status_command i3blocks -c ~/.config/i3/i3blocks.cfg
     position top
@@ -439,4 +439,4 @@ bindsym XF86Documents		exec $term -e ranger ~/Documents
 ##bindsym XF86Battery		exec
 ##bindsym XF86Bluetooth		exec
 bindsym XF86WLAN		exec $netrefresh
-exec_always --no-startup-id notify-send -i ~/.scripts/pix/larbs.png '<b>Welcome to LARBS:</b> Press Super+F1 for the manual.' -t 10000
+exec_always --no-startup-id notify-send -i ~/.scripts/pix/larbs.png 'Welcome to LARBS: Press Super+F1 for the manual.' -t 10000
