--- a/i3blocks.cfg
+++ b/i3blocks.cfg
@@ -18,8 +18,8 @@ signal=9
 # signal=6
 
 [pacpackages]
-label=📦
 interval=once
+label=📦
 signal=8
 
 # [torrent]
@@ -35,26 +35,44 @@ signal=8
 # signal=12
 
 [memory]
+full_text="$BLOCK_NAME"
 interval=30
 label=🧠
-full_text="$BLOCK_NAME"
 
 [cpu]
+full_text="$BLOCK_NAME"
 interval=15
 label=💻
 
+#[disk]
+#command=disk
+#LABEL=HOhE 
+#interval=60
+
 [disk]
+ALERT_LOW=20
+DIR=/
+command=disk
 interval=60
-command=disk /
 label=💽
 
 [disk]
+ALERT_LOW=10
+DIR=/home/undg/
+command=disk
 interval=60
-command=disk /home 🏠
+label=🏠
+
+[disk]
+ALERT_LOW=5
+DIR=/home/undg/Storage/
+command=disk
+interval=60
+label=🏪
 
 [clock]
-label=📅
 interval=30
+label=📅
 
 [internet]
 interval=10
