--- a/config
+++ b/config
@@ -165,7 +165,8 @@ bindsym $mod+r 			exec $term -e ranger
 bindsym $mod+Shift+r	exec --no-startup-id winresize
 
 bindsym $mod+t			split toggle
-bindsym $mod+Shift+t	gaps inner current set 15; gaps outer current set 15
+# bindsym $mod+Shift+t	gaps inner current set 15; gaps outer current set 15
+bindsym $mod+Shift+t	exec --no-startup-id topright
 
 bindsym $mod+y			exec $term -e calcurse
 #bindsym $mod+Shift+y
