move game to diferent monitor

--- a/config
+++ b/config
@@ -44,6 +44,12 @@ set $display3 HDMI-A-0
 # set $display2 DP-2
 # set $display3 HDMI-1
 
+set $WINDOW_poe [class="steam_app_238960"] 
+set $WINDOW_xenotrade [class="XenonTrade"]
+set $WINDOW_steam [class="Steam"]
+set $WINDOW_spotify [class="Spotify"]
+set $WINDOW_kodi [class="Kodi"]
+
 
 # #---Dropdown Windows---# #
 # First I have a tmux window used for background scripts.
@@ -69,7 +75,7 @@ exec_always --no-startup-id feh --bg-scale ~/.config/i3/wallpaper/dog.jpg
 # Starts dunst for notifications:
 exec --no-startup-id dunst
 # Composite manager:
-exec --no-startup-id xcompmgr
+exec --no-startup-id picom
 # Runs the key remapping scripts
 exec --no-startup-id remaps
 # Unclutter makes the mouse invisible after a brief period
@@ -79,7 +85,7 @@ exec --no-startup-id unclutter
 # mpd startup
 #exec --no-startup-id mpd
 # Podboat automatic queue and download
-exec_always --no-startup-id podentr
+# exec_always --no-startup-id podentr
 
 # Set Xresources colors:
 set_from_resource $darkblack	color0  #000000
@@ -296,21 +302,26 @@ bindsym $mod+Shift+8	move container to workspace $ws8
 bindsym $mod+Shift+9	move container to workspace $ws9
 bindsym $mod+Shift+0	move container to workspace $ws10
 
-# set $w_POE [title="Path of Exile"] 
-set $WINDOW_poe [class="steam_app_238960"] 
-set $WINDOW_xenotrade [class="XenonTrade"]
-set $WINDOW_steam [class="Steam"]
-set $WINDOW_spotify [class="Spotify"]
-set $WINDOW_kodi [class="Kodi"]
-
 
 for_window $WINDOW_steam move workspace $ws3
 
-for_window $WINDOW_poe move workspace $ws4
-for_window $WINDOW_xenotrade move workspace $ws4
 for_window $WINDOW_kodi move workspace $ws5
 for_window $WINDOW_spotify move workspace $ws6
 
+for_window $WINDOW_poe move workspace $ws9
+for_window $WINDOW_xenotrade move workspace $ws9
+
+workspace 1 output $display1
+workspace 2 output $display1
+workspace 3 output $display1
+
+workspace 4 output $display3
+workspace 5 output $display3
+workspace 6 output $display3
+
+workspace 7 output $display2
+workspace 8 output $display2
+workspace 9 output $display2
 
 for_window [class="Pinentry"] sticky enable
 for_window [class="sent"] border pixel 0px
@@ -465,18 +476,8 @@ bindsym XF86Documents		exec $term -e ranger ~/Documents
 ##bindsym XF86Battery		exec
 ##bindsym XF86Bluetooth		exec
 bindsym XF86WLAN		exec $netrefresh
+
 exec_always --no-startup-id notify-send -i ~/.scripts/pix/larbs.png 'Welcome to LARBS: Press Super+F1 for the manual.' -t 5000
 
 exec_once --no-startup-id ~/.screenlayout/./init.sh
 
-workspace 1 output $display1
-workspace 2 output $display1
-workspace 3 output $display1
-
-workspace 4 output $display3
-workspace 5 output $display3
-workspace 6 output $display3
-
-workspace 7 output $display2
-workspace 8 output $display2
-workspace 9 output $display2
