--- a/config
+++ b/config
@@ -44,34 +44,6 @@ set $dp_top HDMI-A-0
 # set $dp_right DP-2
 # set $dp_top HDMI-1
 
-set $WINDOW_poe [class="steam_app_238960"] 
-set $WINDOW_gta5 [class="steam_app_271590"] 
-set $WINDOW_portal2 [class="portal2_linux"] 
-set $WINDOW_xenotrade [class="xenonTrade"]
-set $WINDOW_awakened [class="awakened-poe-trade"]
-set $WINDOW_steam [class="Steam"]
-set $WINDOW_spotify [class="Spotify"]
-set $WINDOW_kodi [class="Kodi"]
-set $WINDOW_plex [class="plexmediaplayer"]
-
-
-# #---Dropdown Windows---# #
-# First I have a tmux window used for background scripts.
-# I'll later bind this to mod+u.
-for_window [instance="tmuxdd"] floating enable
-for_window [instance="tmuxdd"] resize set 630 475
-for_window [instance="tmuxdd"] move scratchpad
-for_window [instance="tmuxdd"] border pixel 3
-for_window [instance="tmuxdd"] sticky enable
-
-# Then I have a window running R I use for basic arithmetic
-# I'll later bind this to mod+a.
-for_window [instance="dropdowncalc"] floating enable
-for_window [instance="dropdowncalc"] resize set 800 300
-for_window [instance="dropdowncalc"] move scratchpad
-for_window [instance="dropdowncalc"] border pixel 2
-for_window [instance="dropdowncalc"] sticky enable
-
 
 # #---Starting External Scripts---# #
 # Setting the background:
@@ -136,6 +108,118 @@ bar {
 }
 
 
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3:game"
+set $ws4 "4"
+set $ws5 "5:media"
+set $ws6 "6"
+set $ws7 "7"
+set $ws8 "8"
+set $ws9 "9"
+set $ws10 "10"
+
+# switch to workspace
+bindsym $mod+1		workspace $ws1
+bindsym $mod+2		workspace $ws2
+bindsym $mod+3		workspace $ws3
+bindsym $mod+4		workspace $ws4
+bindsym $mod+5		workspace $ws5
+bindsym $mod+6		workspace $ws6
+bindsym $mod+7		workspace $ws7
+bindsym $mod+8		workspace $ws8
+bindsym $mod+9		workspace $ws9
+bindsym $mod+0		workspace $ws10
+
+
+# move focused container to workspace
+bindsym $mod+Shift+1	move container to workspace $ws1
+bindsym $mod+Shift+2	move container to workspace $ws2
+bindsym $mod+Shift+3	move container to workspace $ws3
+bindsym $mod+Shift+4	move container to workspace $ws4
+bindsym $mod+Shift+5	move container to workspace $ws5
+bindsym $mod+Shift+6	move container to workspace $ws6
+bindsym $mod+Shift+7	move container to workspace $ws7
+bindsym $mod+Shift+8	move container to workspace $ws8
+bindsym $mod+Shift+9	move container to workspace $ws9
+bindsym $mod+Shift+0	move container to workspace $ws10
+
+
+workspace 1 output $dp_left
+workspace 2 output $dp_left
+workspace 3 output $dp_left
+
+workspace 4 output $dp_top
+workspace 5 output $dp_top
+workspace 6 output $dp_top
+
+workspace 7 output $dp_right
+workspace 8 output $dp_right
+workspace 9 output $dp_right
+
+set $WINDOW_poe [class="steam_app_238960"] 
+set $WINDOW_gta5 [class="steam_app_271590"] 
+set $WINDOW_portal2 [class="portal2_linux"] 
+set $WINDOW_xenotrade [class="xenonTrade"]
+set $WINDOW_awakened [class="awakened-poe-trade"]
+set $WINDOW_steam [class="Steam"]
+set $WINDOW_spotify [class="Spotify"]
+set $WINDOW_kodi [class="Kodi"]
+set $WINDOW_plex [class="plexmediaplayer"]
+set $WINDOW_teams [title="Microsoft Teams Notification"]
+
+# #---Dropdown Windows---# #
+# First I have a tmux window used for background scripts.
+# I'll later bind this to mod+u.
+for_window [instance="tmuxdd"] floating enable
+for_window [instance="tmuxdd"] resize set 630 475
+for_window [instance="tmuxdd"] move scratchpad
+for_window [instance="tmuxdd"] border pixel 3
+for_window [instance="tmuxdd"] sticky enable
+
+# Then I have a window running R I use for basic arithmetic
+# I'll later bind this to mod+a.
+for_window [instance="dropdowncalc"] floating enable
+for_window [instance="dropdowncalc"] resize set 800 300
+for_window [instance="dropdowncalc"] move scratchpad
+for_window [instance="dropdowncalc"] border pixel 2
+for_window [instance="dropdowncalc"] sticky enable
+
+
+for_window $WINDOW_steam move workspace $ws3
+for_window $WINDOW_poe move workspace $ws3
+for_window $WINDOW_portal2 move workspace $ws3
+for_window $WINDOW_gta5 move workspace $ws3
+for_window $WINDOW_xenotrade move workspace $ws3
+
+for_window $WINDOW_kodi move workspace $ws5
+for_window $WINDOW_plex move workspace $ws5
+
+
+for_window [class="Pinentry"] sticky enable
+for_window [class="sent"] border pixel 0px
+# for_window [class="Blender"] move to workspace $ws6
+# for_window [class="marble"] move to workspace $ws7
+for_window [window_role="GtkFileChooserDialog"] resize shrink height 10 px
+
+for_window $WINDOW_portal2 floating disable
+for_window $WINDOW_portal2 fullscreen
+for_window $WINDOW_steam layout tabbed
+for_window $WINDOW_poe floating disable
+for_window $WINDOW_gta5 floating disable
+for_window $WINDOW_xenotrade floating enable
+for_window $WINDOW_xenotrade sticky enable
+for_window $WINDOW_xenotrade border pixel 2px
+for_window $WINDOW_awakened border pixel 1px
+for_window $WINDOW_kodi border pixel 1px
+for_window $WINDOW_teams floating enable
+
+# Bindings to make the webcam float and stick.
+for_window [title="mpvfloat"] floating enable
+for_window [title="mpvfloat"] sticky enable
+for_window [title="mpvfloat"] border pixel 0
+no_focus [title="mpvfloat"]
+
 # #---Basic Bindings---# #
 bindsym $mod+Return 		exec $term
 bindsym $mod+Shift+Return	exec --no-startup-id samedir
@@ -154,7 +238,7 @@ bindsym $mod+grave		exec --no-startup-id dmenuunicode
 ##bindsym $mod+asciitilde
 
 #STOP/HIDE EVERYTHING:
-bindsym $mod+Shift+Delete	exec --no-startup-id lmc truemute ; exec --no-startup-id lmc pause ; exec --no-startup-id pauseallmpv; workspace 0; exec $term -e htop ; exec $term -e ranger
+# bindsym $mod+Shift+Delete	exec --no-startup-id lmc truemute ; exec --no-startup-id lmc pause ; exec --no-startup-id pauseallmpv; workspace 0; exec $term -e htop ; exec $term -e ranger
 
 # Show selection:
 bindsym $mod+Insert		exec --no-startup-id showclip
@@ -246,7 +330,7 @@ bindsym $mod+Shift+b	floating toggle; sticky toggle; exec --no-startup-id bottom
 bindsym $mod+n			exec $term -e newsboat && pkill -RTMIN+6 i3blocks
 bindsym $mod+Shift+n	floating toggle; sticky toggle; exec --no-startup-id bottomright
 
-bindsym $mod+m 			exec --no-startup-id $term -e ncmpcpp
+# bindsym $mod+m 			exec --no-startup-id $term -e ncmpcpp
 bindsym $mod+Shift+m	exec --no-startup-id lmc mute
 
 
@@ -270,89 +354,6 @@ bindsym $mod+minus		split vertical ;; exec $term
 bindsym $mod+Shift+slash	kill
 bindsym $mod+slash		workspace back_and_forth
 
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3:game"
-set $ws4 "4"
-set $ws5 "5:media"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
-
-# switch to workspace
-bindsym $mod+1		workspace $ws1
-bindsym $mod+2		workspace $ws2
-bindsym $mod+3		workspace $ws3
-bindsym $mod+4		workspace $ws4
-bindsym $mod+5		workspace $ws5
-bindsym $mod+6		workspace $ws6
-bindsym $mod+7		workspace $ws7
-bindsym $mod+8		workspace $ws8
-bindsym $mod+9		workspace $ws9
-bindsym $mod+0		workspace $ws10
-
-
-# move focused container to workspace
-bindsym $mod+Shift+1	move container to workspace $ws1
-bindsym $mod+Shift+2	move container to workspace $ws2
-bindsym $mod+Shift+3	move container to workspace $ws3
-bindsym $mod+Shift+4	move container to workspace $ws4
-bindsym $mod+Shift+5	move container to workspace $ws5
-bindsym $mod+Shift+6	move container to workspace $ws6
-bindsym $mod+Shift+7	move container to workspace $ws7
-bindsym $mod+Shift+8	move container to workspace $ws8
-bindsym $mod+Shift+9	move container to workspace $ws9
-bindsym $mod+Shift+0	move container to workspace $ws10
-
-
-workspace 1 output $dp_left
-workspace 2 output $dp_left
-workspace 3 output $dp_left
-
-workspace 4 output $dp_top
-workspace 5 output $dp_top
-workspace 6 output $dp_top
-
-workspace 7 output $dp_right
-workspace 8 output $dp_right
-workspace 9 output $dp_right
-
-
-for_window $WINDOW_steam move workspace $ws3
-for_window $WINDOW_poe move workspace $ws3
-for_window $WINDOW_portal2 move workspace $ws3
-for_window $WINDOW_gta5 move workspace $ws3
-for_window $WINDOW_xenotrade move workspace $ws3
-
-for_window $WINDOW_kodi move workspace $ws5
-for_window $WINDOW_plex move workspace $ws5
-
-
-for_window [class="Pinentry"] sticky enable
-for_window [class="sent"] border pixel 0px
-# for_window [class="Blender"] move to workspace $ws6
-# for_window [class="marble"] move to workspace $ws7
-for_window [window_role="GtkFileChooserDialog"] resize shrink height 10 px
-
-for_window $WINDOW_portal2 floating disable
-for_window $WINDOW_portal2 fullscreen
-for_window $WINDOW_steam layout tabbed
-for_window $WINDOW_poe floating disable
-for_window $WINDOW_gta5 floating disable
-for_window $WINDOW_xenotrade floating enable
-for_window $WINDOW_xenotrade sticky enable
-for_window $WINDOW_xenotrade border pixel 2px
-for_window $WINDOW_awakened border pixel 1px
-for_window $WINDOW_kodi border pixel 1px
-
-# Bindings to make the webcam float and stick.
-for_window [title="mpvfloat"] floating enable
-for_window [title="mpvfloat"] sticky enable
-for_window [title="mpvfloat"] border pixel 0
-no_focus [title="mpvfloat"]
-
 
 # #---Function Buttons---# #
 bindsym $mod+F1		exec --no-startup-id groff -kejpt -mom ~/.readme.mom -Tpdf | zathura -
@@ -365,7 +366,7 @@ bindsym $mod+F5		exec --no-startup-id $netrefresh
 # bindsym $mod+F8		exec --no-startup-id ~/.config/mutt/etc/mailsync.sh
 bindsym $mod+F9		exec --no-startup-id dmenumount
 bindsym $mod+F10	exec --no-startup-id dmenuumount
-bindsym $mod+F11	exec --no-startup-id ducksearch
+# bindsym $mod+F11	exec --no-startup-id ducksearch
 # bindsym $mod+F12	exec $term -e nmtui
 
 
@@ -400,7 +401,7 @@ bindsym $mod+Shift+bracketright exec --no-startup-id lmc forward 120
 # For screenshots and recording
 bindsym Print 			exec --no-startup-id imagy-xfce4
 bindsym Shift+Print 		exec --no-startup-id "scrot -s '/tmp/scrot.png' -e 'xclip /tmp/scrot.png'"
-bindsym $mod+Print		exec --no-startup-id dmenurecord
+# bindsym $mod+Print		exec --no-startup-id dmenurecord
 bindsym $mod+Scroll_Lock	exec --no-startup-id "killall screenkey || screenkey"
 bindsym $mod+Delete		exec $stoprec
 bindsym XF86Launch1		exec --no-startup-id xset dpms force off
