--- a/i3blocks.cfg
+++ b/i3blocks.cfg
@@ -45,7 +45,7 @@ ALERT_LOW=20
 DIR=/
 command=disk
 interval=60
-label=💽
+label=🏤
 
 [disk]
 ALERT_LOW=10
@@ -59,7 +59,7 @@ ALERT_LOW=5
 DIR=/home/undg/Storage/
 command=disk
 interval=60
-label=🏪
+label=🏬
 
 [clock]
 interval=30
